Lower min. java version to 8